# historical-trade-sim

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  LICENSE  PRD.md  README.md
.github/: dependabot.yml  last-cleanup.txt
.github/workflows/: cleanup.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_29_init.py  2026_05_08_result_run_at_index.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  benchmarks.py  deps.py  maintenance.py  methodology.py  scenarios.py  securities.py  simulate.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  annual_metric.py  benchmark.py  comparison_run.py  historical_price.py  scenario.py  scenario_position.py  scenario_result.py  security.py
backend/app/schemas/: common.py  scenario.py  security.py
backend/app/services/: maintenance.py  simulator.py
backend/app/services/finance/: __init__.py  dates.py  engine.py  metrics.py
backend/app/services/marketdata/: __init__.py  base.py  fetcher.py  refresh.py  synthetic.py  tiingo.py  yahoo.py
backend/app/services/seed/: data.py  seeder.py
backend/scripts/: cleanup.py  refresh_prices.py  seed.py
backend/tests/: test_finance.py  test_maintenance.py  test_marketdata.py  test_security.py
design-system/historical-trade-scenario-simulator/: MASTER.md
design-system/historical-trade-scenario-simulator/pages/: builder.md  landing.md  results.md
docs/: INTERVIEW_TALKING_POINTS.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/components/buttons/: Button.tsx  LinkButton.tsx
frontend/src/components/charts/: AnnualReturnsChart.tsx  BasketContributionChart.tsx  ChartFrame.tsx  ChartTooltip.tsx  DrawdownChart.tsx  GrowthChart.tsx  Sparkline.tsx
frontend/src/components/feedback/: EmptyState.tsx  ErrorState.tsx  InfoBadge.tsx  Skeleton.tsx
frontend/src/components/form/: Field.tsx  Input.tsx  SegmentedControl.tsx  Select.tsx  TickerChip.tsx  TickerPicker.tsx  Toggle.tsx
frontend/src/components/kpi/: AnimatedNumber.tsx  DeltaChip.tsx  KpiCard.tsx
frontend/src/components/layout/: AppShell.tsx  Card.tsx  Eyebrow.tsx  Footer.tsx  HairlineDivider.tsx  PageHeader.tsx  SectionHeader.tsx
frontend/src/features/builder/: BuilderForm.tsx  BuilderPage.tsx  LivePreview.tsx  builderState.ts
frontend/src/features/compare/: ComparePage.tsx  ComparedGrowthChart.tsx
frontend/src/features/landing/: FinalCTA.tsx  Hero.tsx  HowItWorks.tsx  LandingPage.tsx  LogoStrip.tsx  MethodologyTeaser.tsx  PlainEnglishExplainer.tsx  SampleScenarios.tsx  ScenarioFloatCard.tsx  ValueProps.tsx  presets.ts
frontend/src/features/methodology/: MethodologyPage.tsx
frontend/src/features/results/: BasketBreakdown.tsx  ResultsPage.tsx  ResultsSkeleton.tsx  (+3 more)
frontend/src/i18n/: en.ts
frontend/src/styles/: globals.css
(+8 files in other folders)
