[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "historical-trade-sim-backend"
version = "1.0.0"
description = "FastAPI backend for the Historical Trade Scenario Simulator."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.47.0",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.12",
    "aiosqlite==0.22.1",
    "greenlet==3.5.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
    "orjson==3.11.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.15.13",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "scripts*", "alembic*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
